--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,9 @@
     "eamodio.gitlens",
     "davidanson.vscode-markdownlint",
     "hashicorp.terraform",
-    "ms-azuretools.vscode-docker"
+    "ms-azuretools.vscode-docker",
+    "ms-vscode.PowerShell-Preview",
+    "AmazonWebServices.aws-toolkit-vscode"
   ],
   "postCreateCommand": "/bin/bash ./.devcontainer/post-install.sh"
 }
